--- a/mycocoCapEvalNotebook.ipynb
+++ b/mycocoCapEvalNotebook.ipynb
@@ -41,8 +41,10 @@
     }
    ],
    "source": [
-    "annFile = '/mnt/ssd2/kcheng/gpu205/cocoapi/annotations/captions_val2014.json'\n",
-    "resFile = '/mnt/ssd2/kcheng/gpu205/Image-Captioning-Project/val2014_res.json'\n",
+    "# annFile = '/mnt/ssd2/kcheng/gpu205/cocoapi/annotations/captions_val2014.json'\n",
+    "# resFile = '/mnt/ssd2/kcheng/gpu205/Image-Captioning-Project/val2014_res.json'\n",
+    "annFile = 'annotations/captions_val2014.json'\n",
+    "resFile = 'results/val2014_res.json'\n",
     "\n",
     "# download Stanford models\n",
     "!./get_stanford_models.sh"
